Update y delete
Agregado ambos endpoints para actualizar y eliminar mantenimientos de autos
